# Wordx

./: .~lock.generation_of_standard_model.docx#  .~lock.standard_model.docx#  CMakeLists.txt  README.md  add_image_thread.h  demo.cpp  document.xml  fileop.cpp  fileop.h  info.cpp  info.h  main.cpp  standard_model.docx  standard_model_copy.docx  wordop.cpp  wordop.h  xml_models.qrc  zipper.h
demo_files/: first_rec_info_list  img_list  mark_info  mark_list  replace_info  second_rec_info_list  table_info
doc/: Wordx开发文档.docx
doc/示例/: result.docx  test_word.docx
include/: fileop.h  info.h  wordop.h
src/: add_image_thread.cpp  fileop.cpp  wordop.cpp
xml_models/: image.xml  new_table.xml  table_style.xml
zip_pack/: CMakeLists.txt  fileop.cpp  fileop.h  main.cpp  models.qrc  wordop.cpp  wordop.h
zipper/: CMakeLists.txt
zipper/minizip/: CMakeLists.txt  crypt.h  ioapi.c  ioapi.h  ioapi_buf.c  ioapi_buf.h  ioapi_mem.c  ioapi_mem.h  iowin32.c  iowin32.h  miniunz.c  minizip.c  unzip.c  unzip.h  zip.c  zip.h
zipper/minizip/aes/: aes_via_ace.h  aeskey.c  aesopt.h  brg_endian.h  entropy.c  entropy.h  fileenc.c  fileenc.h  hmac.c  hmac.h  prng.c  prng.h  pwd2key.c  pwd2key.h
zipper/test/: catch.hpp  file_zip_test.cpp  memory_zip_test.cpp  test.vcxproj
zipper/zipper/: CDirEntry.cpp  CDirEntry.h  Timestamp.h  defs.h  tools.cpp  tools.h  unzipper.cpp  unzipper.h  zipper.cpp  zipper.vcxproj
zipper/zipper/tps/: dirent.c  dirent.h
zipper/zlib/: CMakeLists.txt  crc32.c  deflate.c  deflate.h  gzguts.h  gzlib.c  gzread.c  gzwrite.c  inffast.c  inflate.c  inflate.h  inftrees.c  trees.c  zlib.h  zutil.c  zutil.h
zipper/zlib/contrib/infback9/: inftree9.c
zipper/zlib/contrib/minizip/: crypt.h  ioapi.c  miniunz.c  minizip.c  zip.c
zipper/zlib/examples/: enough.c  gzappend.c  gzlog.c  gznorm.c  zran.c
zipper/zlib/test/: example.c
